--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,12 @@
       </plugin>
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <url>http://maven.jenkins-ci.org:8081/content/repositories/releases</url>
+    </repository>
+  </distributionManagement>
+
 </project>
